; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_g_arenas.c_Svcmd_AbortPodium_f.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_g_arenas.c_Svcmd_AbortPodium_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32 }

@g_gametype = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@GT_SINGLE_PLAYER = common dso_local global i64 0, align 8
@podium1 = common dso_local global %struct.TYPE_4__* null, align 8
@level = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@CelebrateStop = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Svcmd_AbortPodium_f() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @g_gametype, i32 0, i32 0), align 8
  %2 = load i64, i64* @GT_SINGLE_PLAYER, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %15

5:                                                ; preds = %0
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @podium1, align 8
  %7 = icmp ne %struct.TYPE_4__* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %5
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @level, i32 0, i32 0), align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @podium1, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @CelebrateStop, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** @podium1, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %4, %8, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
